objects/Student_Section__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Lang_Comments__c</fullName>
        <label>Alternate Lang Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_Time__c</fullName>
        <label>Amount of time per section</label>
        <summarizedField>Intervention_Session_Result__c.Amount_of_Time__c</summarizedField>
        <summaryForeignKey>Intervention_Session_Result__c.Student_Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Section_Grade__c</fullName>
        <formula>IF(Count_Section_Grades__c &gt; 0,(Total_Grade_Value__c / (100*Count_Section_Grades__c)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Section Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_Section_Grades__c</fullName>
        <label>Count Section Grades</label>
        <summaryForeignKey>Section_Grade__c.Student_Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dosage_to_Date__c</fullName>
        <inlineHelpText>The total number of minutes to date that this student has had in this particular Intervention Section</inlineHelpText>
        <label>Dosage to Date</label>
        <summarizedField>Intervention_Session_Result__c.Amount_of_Time__c</summarizedField>
        <summaryForeignKey>Intervention_Session_Result__c.Student_Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dosage_to_Date_hrs__c</fullName>
        <description>Dosage to Date calculated in hours</description>
        <formula>Dosage_to_Date__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dosage to Date calculated in hours</inlineHelpText>
        <label>Dosage to Date (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_End_Date__c</fullName>
        <label>Enrollment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <label>Enrollment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failing__c</fullName>
        <formula>IF(OR(ISNULL(Average_Section_Grade__c), ISNULL(Student__r.Setup__r.Passing_Grade_Threshold__c),Count_Section_Grades__c=0),&apos;No&apos;,IF(100*Average_Section_Grade__c &lt;  Student__r.Setup__r.Passing_Grade_Threshold__c , &apos;Yes&apos;, &apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Student/Section</relationshipLabel>
        <relationshipName>Student_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_School_Extended_Learning_Curriculum__c</fullName>
        <formula>TEXT( Section__r.In_After_School__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In School/Extended Learning/Curriculum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention_Enrollment_Start_Date__c</fullName>
        <inlineHelpText>Date the Student was enrolled in the Section. If the Student has re-entered this Section, this field will update with the new enrollment date.</inlineHelpText>
        <label>Intervention Enrollment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Section__c</fullName>
        <formula>Section__r.Is_Section__c</formula>
        <label>Is Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Student_ID__c</fullName>
        <formula>Student__r.Local_Student_ID__c</formula>
        <label>Local Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT(Student__r.School__r.Site__c )</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_School_Salesforce_ID__c</fullName>
        <label>Original School Salesforce ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_School__c</fullName>
        <label>Original School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>CASESAFEID(Section__r.Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <description>Concatenated unique id = StudentReference_ID__c + Reference Legacy_ID__c</description>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Reference_Id__c</fullName>
        <formula>Student__r.School__r.Reference_Id__c</formula>
        <label>School Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year_Name__c</fullName>
        <formula>Student__r.School_Year__r.Name__c</formula>
        <label>School Year Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Student__r.School__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Attendance_Flag__c</fullName>
        <formula>IF (Section__r.Record_Attendance__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Section Attendance Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Exit_Reason__c</fullName>
        <label>Section Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accidental Enrollment</fullName>
                </value>
                <value>
                    <fullName>School Year ended</fullName>
                </value>
                <value>
                    <fullName>Deactivated by trigger.</fullName>
                </value>
                <value>
                    <fullName>ACM no longer available</fullName>
                </value>
                <value>
                    <fullName>Student no longer available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <formula>Section__r.Name</formula>
        <label>Section Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Period__c</fullName>
        <formula>IF(  ISBLANK(Section__r.Period__c)  , &apos;&apos;, Section__r.Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_RT__c</fullName>
        <formula>Section__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_ReportingPeriod_StartDate__c</fullName>
        <formula>Section__r.Reporting_Period__r.Date_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Reporting Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student_Section</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section_time__c</fullName>
        <formula>Section__r.Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Year_Name__c</fullName>
        <formula>Student__r.Setup__r.Year__r.Name__c</formula>
        <label>Setup Year Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Entry_Date__c</fullName>
        <formula>Student__r.Entry_Date__c</formula>
        <label>Student Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_First_Name__c</fullName>
        <formula>Student__r.Student_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Grade__c</fullName>
        <formula>TEXT( Student__r.Grade__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Student&apos;s grade level at the time of the Section</inlineHelpText>
        <label>Student Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <formula>Student__r.Student_Id__c</formula>
        <label>Student Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>Student__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Program</label>
        <referenceTo>Student_Program__c</referenceTo>
        <relationshipLabel>Student/Section</relationshipLabel>
        <relationshipName>Student_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Section</relationshipLabel>
        <relationshipName>Student_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_school_year__c</fullName>
        <formula>Student__r.School_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student school year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Grade_Value__c</fullName>
        <label>Total Grade Value</label>
        <summarizedField>Section_Grade__c.Grade__c</summarizedField>
        <summaryForeignKey>Section_Grade__c.Student_Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Student_Section__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Student/Section</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Late_Homework__c</fullName>
        <description>System generated tally of number of late homework assignments for the particular section</description>
        <inlineHelpText>System generated tally of number of late homework assignments for the particular section</inlineHelpText>
        <label># of Late Homework</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Missing_Homework__c</fullName>
        <description>System generated tally of number of missing homework assignments for the particular section</description>
        <inlineHelpText>System generated tally of number of missing homework assignments for the particular section</inlineHelpText>
        <label># of Missing Homework</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student/Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>Student__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>out_of_date_range</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>Intervention_Enrollment_Start_Date__c</columns>
        <columns>School__c</columns>
        <columns>Location__c</columns>
        <columns>Student_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intervention_Enrollment_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>7/1/2017</value>
        </filters>
        <filters>
            <field>Intervention_Enrollment_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/30/2018</value>
        </filters>
        <label>intervention start date - out of range</label>
        <sharedTo>
            <role>Admin</role>
            <role>Baton_Rouge_Site_Admin</role>
            <role>Baton_Rouge_Site_User</role>
            <role>BehaviorCoordinator</role>
            <role>Boston_Site_Admin</role>
            <role>Boston_Site_User</role>
            <role>CY_HQ</role>
            <role>Chicago_Site_Admin</role>
            <role>Chicago_Site_User</role>
            <role>Cleveland_Site_Admin</role>
            <role>Cleveland_Site_User</role>
            <role>Columbia_Site_Admin</role>
            <role>Columbia_Site_User</role>
            <role>Columbus_Site_Admin</role>
            <role>Columbus_Site_User</role>
            <role>Dallas_Site_Admin</role>
            <role>Dallas_Site_User</role>
            <role>Denver_Site_Admin</role>
            <role>Denver_Site_User</role>
            <role>Detroit_Site_Admin</role>
            <role>Detroit_Site_User</role>
            <role>Jacksonville_Site_Admin</role>
            <role>Jacksonville_Site_User</role>
            <role>Kansas_City_Site_Admin</role>
            <role>Kansas_City_Site_User</role>
            <role>Little_Rock_Site_Admin</role>
            <role>Little_Rock_Site_User</role>
            <role>Los_Angeles_Site_Admin</role>
            <role>Los_Angeles_Site_User</role>
            <role>Memphis_Site_Admin</role>
            <role>Memphis_Site_User</role>
            <role>Miami_Site_Admin</role>
            <role>Miami_Site_User</role>
            <role>Milwaukee_Site_Admin</role>
            <role>Milwaukee_Site_User</role>
            <role>New_Hampshire_Site_Admin</role>
            <role>New_Hampshire_Site_User</role>
            <role>New_Orleans_Site_Admin</role>
            <role>New_Orleans_Site_User</role>
            <role>New_York_City_Site_Admin</role>
            <role>New_York_City_Site_User</role>
            <role>Orlando_Site_Admin</role>
            <role>Orlando_Site_User</role>
            <role>Philadelphia_Site_Admin</role>
            <role>Philadelphia_Site_User</role>
            <role>Providence_Site_Admin</role>
            <role>Providence_Site_User</role>
            <role>Rhode_Island_Site_Admin</role>
            <role>Rhode_Island_Site_User</role>
            <role>Sacramento_Site_Admin</role>
            <role>Sacramento_Site_User</role>
            <role>San_Antonio_Site_Admin</role>
            <role>San_Antonio_Site_User</role>
            <role>San_Jose_Silicon_Valley_Site_Admin</role>
            <role>San_Jose_Silicon_Valley_Site_User</role>
            <role>Seattle_King_County_Site_Admin</role>
            <role>Seattle_King_County_Site_User</role>
            <role>Tulsa_Site_Admin</role>
            <role>Tulsa_Site_User</role>
            <role>Washington_DC_Site_Admin</role>
            <role>Washington_DC_Site_User</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Student/Section ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student/Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accidental_Enrollment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(TEXT(Section_Exit_Reason__c) = &quot;Accidental Enrollment&quot;,
	IF(Dosage_to_Date__c &lt; 1 &amp;&amp; DATEVALUE(Enrollment_End_Date__c) = DATEVALUE(Intervention_Enrollment_Start_Date__c),False,True)
,False)</errorConditionFormula>
        <errorDisplayField>Section_Exit_Reason__c</errorDisplayField>
        <errorMessage>Accidentally enrolled students should have no program dosage and 0 days of enrollment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exit_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Enrollment_End_Date__c )) &amp;&amp;  ISBLANK(TEXT( Section_Exit_Reason__c  ))</errorConditionFormula>
        <errorDisplayField>Section_Exit_Reason__c</errorDisplayField>
        <errorMessage>An Exit Reason Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Intervention_validation</fullName>
        <active>true</active>
        <description>an intervention validation that an exit date cannot be before the intervention section start date</description>
        <errorConditionFormula>Enrollment_Start_Date__c &gt; Enrollment_End_Date__c</errorConditionFormula>
        <errorDisplayField>Intervention_Enrollment_Start_Date__c</errorDisplayField>
        <errorMessage>Intervention Exit Date cannot be before Intervention Enrollment Start Date.</errorMessage>
    </validationRules>
</CustomObject>