objects/Student_Section__c/fields/Student_Section_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_Section_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student/Section 18 Digit ID</label>
    <type>Text</type>
</CustomField>