objects/Student_Section__c/fields/Total_number_of_sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_sessions__c</fullName>
    <label>Total number of sessions</label>
    <summaryForeignKey>Intervention_Session_Result__c.Student_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>