objects/Student_Section__c/validationRules/Exit_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_reason_required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( Enrollment_End_Date__c )) &amp;&amp;  ISBLANK(TEXT( Section_Exit_Reason__c  ))</errorConditionFormula>
    <errorDisplayField>Section_Exit_Reason__c</errorDisplayField>
    <errorMessage>An Exit Reason Is Required</errorMessage>
</ValidationRule>