objects/Student_Section__c/validationRules/Intervention_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Intervention_validation</fullName>
    <active>true</active>
    <description>an intervention validation that an exit date cannot be before the intervention section start date</description>
    <errorConditionFormula>Enrollment_Start_Date__c &gt; Enrollment_End_Date__c</errorConditionFormula>
    <errorDisplayField>Intervention_Enrollment_Start_Date__c</errorDisplayField>
    <errorMessage>Intervention Exit Date cannot be before Intervention Enrollment Start Date.</errorMessage>
</ValidationRule>