objects/Student_Section__c/listViews/out_of_date_range.listView-meta.xml
<ListView>
    <fullName>out_of_date_range</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Intervention_Enrollment_Start_Date__c</columns>
    <columns>School__c</columns>
    <columns>Location__c</columns>
    <columns>Student_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intervention_Enrollment_Start_Date__c</field>
        <operation>lessThan</operation>
        <value>7/1/2017</value>
    </filters>
    <filters>
        <field>Intervention_Enrollment_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>6/30/2018</value>
    </filters>
    <label>intervention start date - out of range</label>
    <sharedTo>
        <role>Admin</role>
        <role>Baton_Rouge_Site_Admin</role>
        <role>Baton_Rouge_Site_User</role>
        <role>BehaviorCoordinator</role>
        <role>Boston_Site_Admin</role>
        <role>Boston_Site_User</role>
        <role>CY_HQ</role>
        <role>Chicago_Site_Admin</role>
        <role>Chicago_Site_User</role>
        <role>Cleveland_Site_Admin</role>
        <role>Cleveland_Site_User</role>
        <role>Columbia_Site_Admin</role>
        <role>Columbia_Site_User</role>
        <role>Columbus_Site_Admin</role>
        <role>Columbus_Site_User</role>
        <role>Dallas_Site_Admin</role>
        <role>Dallas_Site_User</role>
        <role>Denver_Site_Admin</role>
        <role>Denver_Site_User</role>
        <role>Detroit_Site_Admin</role>
        <role>Detroit_Site_User</role>
        <role>Jacksonville_Site_Admin</role>
        <role>Jacksonville_Site_User</role>
        <role>Kansas_City_Site_Admin</role>
        <role>Kansas_City_Site_User</role>
        <role>Little_Rock_Site_Admin</role>
        <role>Little_Rock_Site_User</role>
        <role>Los_Angeles_Site_Admin</role>
        <role>Los_Angeles_Site_User</role>
        <role>Memphis_Site_Admin</role>
        <role>Memphis_Site_User</role>
        <role>Miami_Site_Admin</role>
        <role>Miami_Site_User</role>
        <role>Milwaukee_Site_Admin</role>
        <role>Milwaukee_Site_User</role>
        <role>New_Hampshire_Site_Admin</role>
        <role>New_Hampshire_Site_User</role>
        <role>New_Orleans_Site_Admin</role>
        <role>New_Orleans_Site_User</role>
        <role>New_York_City_Site_Admin</role>
        <role>New_York_City_Site_User</role>
        <role>Orlando_Site_Admin</role>
        <role>Orlando_Site_User</role>
        <role>Philadelphia_Site_Admin</role>
        <role>Philadelphia_Site_User</role>
        <role>Providence_Site_Admin</role>
        <role>Providence_Site_User</role>
        <role>Rhode_Island_Site_Admin</role>
        <role>Rhode_Island_Site_User</role>
        <role>Sacramento_Site_Admin</role>
        <role>Sacramento_Site_User</role>
        <role>San_Antonio_Site_Admin</role>
        <role>San_Antonio_Site_User</role>
        <role>San_Jose_Silicon_Valley_Site_Admin</role>
        <role>San_Jose_Silicon_Valley_Site_User</role>
        <role>Seattle_King_County_Site_Admin</role>
        <role>Seattle_King_County_Site_User</role>
        <role>Tulsa_Site_Admin</role>
        <role>Tulsa_Site_User</role>
        <role>Washington_DC_Site_Admin</role>
        <role>Washington_DC_Site_User</role>
    </sharedTo>
</ListView>